Fix overlapping of shelf options on supervised user creation page when rotating screen

BUG=627040
TEST=manual test saw bug fixed

Review-Url: https://codereview.chromium.org/2137083004
Cr-Commit-Position: refs/heads/master@{#405045}

Former-commit-id: bdf7241b6babfab7e3c1970c508ba43a306a3b47